--- a/blogs_/templates/blogs_/base.html
+++ b/blogs_/templates/blogs_/base.html
@@ -1,5 +1,12 @@
 <p>
   <a href="{% url 'blogs_:index' %}">Home</a> - 
-  <a href="{% url 'blogs_:blogs' %}">Blogs</a>
+  <a href="{% url 'blogs_:blogs' %}">Blogs</a> - 
+  {% if user.is_authenticated %}
+    Hello,{{ user.username }}.
+    <a href="{% url 'users:logout' %}">Logout</a>
+  {% else %}
+    <a href="{% url 'users:register' %}">Register</a> - 
+    <a href="{% url 'users:login' %}">Login</a>
+  {% endif %}
 </p>
 {% block content %}{% endblock content %}
